# coding-agent-megaschool

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  issue.yml  pr-fix.yml  pr.yml  reusable-coder.yml  reusable-planner.yml  reusable-pr-fix.yml  reusable-reviewer.yml
agents/: __init__.py  orchestrator.py
agents/coder_agent/: agent.py  runner.py  tools.py
agents/common/: config.py  context.py  env.py  github_client.py  openai_client.py  sdk_config.py  tools.py
agents/planner_agent/: agent.py  cli.py  planner.py
agents/reviewer_agent/: agent.py  runner.py
configs/: logging.yaml  settings.yaml
examples/workflows/: sdlc-reviewer.yml
github_agents/: __init__.py  orchestrator.py
github_agents/ci_fixer_agent/: __init__.py  agent.py  prompts.py
github_agents/coder_agent/: __init__.py  agent.py  messages.py  prompts.py  run_from_plan.py  run_from_pr_comments.py  run_unified.py  runner_utils.py
github_agents/common/: code_index.py  config.py  context.py  github_client.py  sdk_config.py  tools.py
github_agents/planner_agent/: agent.py  prompts.py
github_agents/reviewer_agent/: agent.py  prompts.py
megaschool_agents.egg-info/: PKG-INFO  SOURCES.txt
scripts/: run_watcher.sh  watcher.py
tests/: test_issue_parsing.py  test_review_report.py
