[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "megaschool-agents"
version = "0.1.0"
description = "Code and review agents for the Megaschool SDLC task."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyGithub>=2.3.0",
  "openai>=1.40.0",
  "requests>=2.32.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*"]
